Support running on Java 17
Note: development may not work completely (some warnings during compilation), but running should work fine.

Mostly solves https://github.com/t-oster/VisiCut/issues/614